[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/GazeManager.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Stroke_Circle_002.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Game/GazeCheck.gd" type="Script" id=3]
[ext_resource path="res://Fonts/StatsHeadingFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/GameButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Fonts/NotoSansJP-Medium.otf" type="DynamicFontData" id=6]
[ext_resource path="res://Fonts/BalooTamma2-SemiBold.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 52
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )

[node name="GazeCheck" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -448, 80 )
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [ 960.0 ]
}

[node name="GazeManager" parent="." instance=ExtResource( 1 )]

[node name="left_eye" type="Sprite" parent="."]
modulate = Color( 0.00392157, 0.509804, 1, 1 )
position = Vector2( 255.531, 304.246 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="right_eye" type="Sprite" parent="."]
modulate = Color( 1, 0.0470588, 0, 1 )
position = Vector2( 736, 568 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="LeftEyePositionLabel" type="Label" parent="."]
margin_left = 712.0
margin_top = 1024.0
margin_right = 944.0
margin_bottom = 1064.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "0"
autowrap = true
__meta__ = {
"_edit_group_": true
}

[node name="label3" type="Label" parent="LeftEyePositionLabel"]
margin_left = -110.0
margin_right = 610.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Left:"
autowrap = true

[node name="RightEyePositionLabel" type="Label" parent="."]
margin_left = 1080.0
margin_top = 1024.0
margin_right = 1400.0
margin_bottom = 1064.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "0"
autowrap = true
__meta__ = {
"_edit_group_": true
}

[node name="label4" type="Label" parent="RightEyePositionLabel"]
margin_left = -110.0
margin_right = 610.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Right
"
autowrap = true

[node name="GazeEpochLabel" type="Label" parent="."]
margin_left = 136.0
margin_top = 888.0
margin_right = 380.0
margin_bottom = 928.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "0"
autowrap = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="GazeEpochLabel"]
margin_left = -110.0
margin_right = 610.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Gaze  time:"
autowrap = true

[node name="CPUTimeLabel" type="Label" parent="."]
margin_left = 136.0
margin_top = 936.0
margin_right = 360.0
margin_bottom = 976.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "0"
autowrap = true
__meta__ = {
"_edit_group_": true
}

[node name="Label2" type="Label" parent="CPUTimeLabel"]
margin_left = -110.0
margin_right = 610.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Game time:"
autowrap = true

[node name="LatencyLabel" type="Label" parent="."]
margin_left = 136.0
margin_top = 984.0
margin_right = 360.0
margin_bottom = 1024.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "0"
autowrap = true
__meta__ = {
"_edit_group_": true
}

[node name="Label2" type="Label" parent="LatencyLabel"]
margin_left = -110.0
margin_right = 610.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Latency:"
autowrap = true

[node name="BackButton" parent="." instance=ExtResource( 5 )]
margin_left = 912.0
margin_top = 912.0
margin_right = 1012.0
margin_bottom = 952.0
rect_pivot_offset = Vector2( 96, -728 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "BACK"

[node name="Disclaimer_JA" type="Label" parent="."]
margin_left = 600.0
margin_top = 64.0
margin_right = 1340.0
margin_bottom = 304.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "視線追跡の動作確認を行います。

「START」の文字を5秒間見るとゲームが開始します。

取りやめる場合、「BACK」ボタンを押してください。"
autowrap = true

[node name="Disclaimer" type="Label" parent="."]
margin_left = 600.0
margin_top = 272.0
margin_right = 1320.0
margin_bottom = 472.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Verifying gaze tracking.

Please look at the \"START\" sign below for 5 seconds to begin the game.

Click on the \"BACK\" button to quit the experiment."
autowrap = true

[node name="StartLabel" type="Label" parent="."]
margin_left = 760.0
margin_top = 592.0
margin_right = 1160.0
margin_bottom = 742.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "START"
align = 1
valign = 1

[node name="ProgressBar" type="ProgressBar" parent="StartLabel"]
margin_left = 128.0
margin_top = 104.0
margin_right = 264.0
margin_bottom = 118.0
max_value = 5.0
percent_visible = false

[connection signal="gaze_update" from="GazeManager" to="." method="_on_GazeManager_gaze_update"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
